Feat(config): add domain configuration to application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+com.gdgguadalajara.open-badges-platform.domain=${COM_GDGGUADALAJARA_OPEN_BADGES_PLATFORM_DOMAIN:https://open-badges-platform.gdgguadalajara.com}
 quarkus.application.name=com.gdgguadalajara.open-badges-platform
 
 quarkus.http.host=0.0.0.0
