Feat(ApplicationProperties): add development domain configuration for local testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ quarkus.http.host=0.0.0.0
 quarkus.devservices.enabled=false
 quarkus.http.cors.origins=https://open-badges-platform.gdgguadalajara.com
 
+%dev.com.gdgguadalajara.open-badges-platform.domain=http://127.0.0.1:8080
 %dev.quarkus.http.cors.origins=*
 %dev.quarkus.hibernate-orm.log.bind-parameters=true
 %dev.quarkus.hibernate-orm.log.sql=true
