Feat(ApplicationProperties): add OIDC configuration for Google authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
 com.gdgguadalajara.open-badges-platform.domain=${COM_GDGGUADALAJARA_OPEN_BADGES_PLATFORM_DOMAIN:https://open-badges-platform.gdgguadalajara.com}
+com.gdgguadalajara.open-badges-platform.security.super-admins=${COM_GDGGUADALAJARA_OPEN_BADGES_PLATFORM_SECURITY_SUPER_ADMINS}
+
 quarkus.application.name=com.gdgguadalajara.open-badges-platform
 
 quarkus.http.host=0.0.0.0
 quarkus.devservices.enabled=false
 quarkus.http.cors.origins=https://open-badges-platform.gdgguadalajara.com
+
+quarkus.oidc.provider=google
+quarkus.oidc.application-type=hybrid
+quarkus.oidc.authentication.verify-access-token=false
+quarkus.oidc.client-id=CLIENT_ID.apps.googleusercontent.com
+quarkus.oidc.credentials.secret=SECRET
+quarkus.oidc.authentication.scopes=openid,email,profile
+quarkus.oidc.token.principal-claim=email
+quarkus.oidc.authentication.user-info-required=true
 
 %dev.com.gdgguadalajara.open-badges-platform.domain=http://127.0.0.1:8080
 %dev.quarkus.http.cors.origins=*
@@ -13,7 +24,7 @@ quarkus.http.cors.origins=https://open-badges-platform.gdgguadalajara.com
 
 quarkus.datasource.db-kind=sqlite
 quarkus.datasource.jdbc.url=jdbc:sqlite:./data/open-badges-platform.sqlite3
-quarkus.hibernate-orm.database.generation=drop-and-create
+quarkus.hibernate-orm.database.generation=update
 quarkus.flyway.migrate-at-start=false
 quarkus.flyway.baseline-on-migrate=false
 
@@ -22,6 +33,9 @@ mp.jwt.verify.publickey.location=file:data/publicKey.pem
 mp.jwt.verify.issuer=https://open-badges-platform.gdgguadalajara.com/issuer
 mp.jwt.verify.audiences=com.gdgguadalajara.open-badges-platform
 
+quarkus.smallrye-openapi.oidc-open-id-connect-url=https://accounts.google.com
+quarkus.swagger-ui.oauth-client-id=${quarkus.oidc.client-id}
+quarkus.swagger-ui.oauth-client-secret=${quarkus.oidc.credentials.secret}
 quarkus.smallrye-openapi.store-schema-directory=src/main/webui/
 
 quarkus.quinoa.package-manager-install.node-version=22.21.1
