--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -10,7 +10,7 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-micro -t quarkus/open-badges-platform .
+# docker build -f src/main/docker/Dockerfile.native-micro -t northamerica-south1-docker.pkg.dev/ushieru/xalixcolabs/open-badges-platform:latest .
 #
 # Then run the container using:
 #
@@ -21,9 +21,10 @@
 ###
 FROM quay.io/quarkus/ubi9-quarkus-micro-image:2.0
 WORKDIR /work/
-RUN chown 1001 /work \
-    && chmod "g+rwX" /work \
-    && chown 1001:root /work
+RUN mkdir -p /work/data \
+    && chown -R 1001 /work \
+    && chmod -R "g+rwX" /work \
+    && chown -R 1001:root /work
 COPY --chown=1001:root --chmod=0755 build/*-runner /work/application
 
 EXPOSE 8080
