Feat(ApplicationProperties): add resend API key and URL for integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 com.gdgguadalajara.open-badges-platform.domain=${COM_GDGGUADALAJARA_OPEN_BADGES_PLATFORM_DOMAIN:https://open-badges-platform.gdgguadalajara.com}
 com.gdgguadalajara.open-badges-platform.security.super-admins=${COM_GDGGUADALAJARA_OPEN_BADGES_PLATFORM_SECURITY_SUPER_ADMINS}
 
+resend.api.key=${RESEND_API_KEY:re_123456789...}
+quarkus.rest-client.resend-api.url=${RESEND_API_URL:https://api.resend.com}
+
 quarkus.application.name=com.gdgguadalajara.open-badges-platform
 
 quarkus.http.host=0.0.0.0
