--- a/src/main/docker/Dockerfile.native-micro
+++ b/src/main/docker/Dockerfile.native-micro
@@ -19,15 +19,43 @@
 # The `quay.io/quarkus/ubi9-quarkus-micro-image:2.0` base image is based on UBI 9.
 # To use UBI 8, switch to `quay.io/quarkus/quarkus-micro-image:2.0`.
 ###
+FROM registry.access.redhat.com/ubi9/ubi-minimal:latest AS installer
+
+RUN microdnf install -y \
+    freetype fontconfig expat libpng bzip2-libs libuuid zlib \
+    libjpeg-turbo lcms2 \
+    java-21-openjdk-headless \
+    && microdnf clean all
+
+RUN mkdir -p /deps && \
+    cp -P /usr/lib64/libfreetype.so* /deps/ && \
+    cp -P /usr/lib64/libfontconfig.so* /deps/ && \
+    cp -P /usr/lib64/libexpat.so* /deps/ && \
+    cp -P /usr/lib64/libpng16.so* /deps/ && \
+    cp -P /usr/lib64/libbz2.so* /deps/ && \
+    cp -P /usr/lib64/libuuid.so* /deps/ && \
+    cp -P /usr/lib64/libz.so* /deps/ && \
+    cp -P /usr/lib64/libjpeg.so* /deps/ && \
+    cp -P /usr/lib64/liblcms2.so* /deps/ && \
+    cp -P /usr/lib/jvm/jre-21-openjdk/lib/*.so /deps/ && \
+    cp -P /usr/lib/jvm/jre-21-openjdk/lib/server/*.so /deps/
+
 FROM quay.io/quarkus/ubi9-quarkus-micro-image:2.0
+
+COPY --from=installer /deps/ /usr/lib64/
+
+COPY --from=installer /etc/fonts /etc/fonts
+COPY --from=installer /usr/share/fonts /usr/share/fonts
+COPY --from=installer /usr/share/fontconfig /usr/share/fontconfig
+
+ENV LD_LIBRARY_PATH=/usr/lib64
+
 WORKDIR /work/
-RUN mkdir -p /work/data \
-    && chown -R 1001 /work \
-    && chmod -R "g+rwX" /work \
-    && chown -R 1001:root /work
+RUN mkdir -p /work/data && chown -R 1001 /work && chmod -R "g+rwX" /work
+
 COPY --chown=1001:root --chmod=0755 build/*-runner /work/application
 
 EXPOSE 8080
 USER 1001
 
-ENTRYPOINT ["./application", "-Dquarkus.http.host=0.0.0.0"]
+ENTRYPOINT ["./application", "-Dquarkus.http.host=0.0.0.0", "-Djava.awt.headless=true"]
