Feat(build.gradle): remove quarkus-mailer add quarkus-awt and quarkus-rest-client-jackson dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.quarkus:quarkus-mailer'
+    implementation 'io.quarkus:quarkus-awt'
+    implementation 'io.quarkus:quarkus-rest-client-jackson'
     implementation 'io.quarkus:quarkus-qute'
     implementation 'io.quarkus:quarkus-oidc'
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
