Feat(BuildScript): update build script to include orval for API generation

--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nuxt generate",
+    "build": "orval && nuxt generate",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
