--- a/src/main/webui/package.json
+++ b/src/main/webui/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^25.1.0",
     "daisyui": "^5.5.14",
     "orval": "^8.1.0"
   }
