Feat(Configuration): update application properties for proxy settings and enhance login/logout navigation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,8 @@ quarkus.quinoa.build-dir=.output/public
 quarkus.quinoa.ignored-path-prefixes=/api
 
 quarkus.native.additional-build-args=--initialize-at-run-time=com.gdgguadalajara.account.application.LinkEmail
+
+quarkus.oidc.authentication.force-redirect-https-scheme=true
+
+quarkus.http.proxy.proxy-address-forwarding=true
+quarkus.http.proxy.enable-forwarded-host=true
