Feat(ApplicationProperties): add development configurations for OIDC and HTTP proxy settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,9 @@ quarkus.oidc.authentication.user-info-required=true
 %dev.quarkus.http.cors.origins=*
 %dev.quarkus.hibernate-orm.log.bind-parameters=true
 %dev.quarkus.hibernate-orm.log.sql=true
+%dev.quarkus.oidc.authentication.force-redirect-https-scheme=false
+%dev.quarkus.http.proxy.proxy-address-forwarding=false
+%dev.quarkus.http.proxy.enable-forwarded-host=false
 
 quarkus.datasource.db-kind=sqlite
 quarkus.datasource.jdbc.url=jdbc:sqlite:./data/open-badges-platform.sqlite3
