--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'io.quarkus:quarkus-jdbc-postgresql'
     implementation 'io.quarkus:quarkus-scheduler'
     implementation 'io.quarkus:quarkus-awt'
     implementation 'io.quarkus:quarkus-rest-client-jackson'
