--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,8 +28,10 @@ quarkus.oidc.authentication.user-info-required=true
 %dev.quarkus.http.proxy.proxy-address-forwarding=false
 %dev.quarkus.http.proxy.enable-forwarded-host=false
 
-quarkus.datasource.db-kind=sqlite
-quarkus.datasource.jdbc.url=jdbc:sqlite:./data/open-badges-platform.sqlite3
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/open-badges-platform-test
+quarkus.datasource.username=postgresql
+quarkus.datasource.password=postgresql
 quarkus.hibernate-orm.database.generation=validate
 quarkus.flyway.migrate-at-start=true
 quarkus.flyway.baseline-on-migrate=true
